<resources>
    <!-- App info -->
    <string name="app_name">ElectroMart</string>
    <string name="app_slogan">Power your tech, simplify your life.</string>

    <!-- Common -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>

    <!-- Login -->
    <string name="login_title">Log in</string>
    <string name="remember_me">Remember</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account_signup">Don’t have an account? Sign up</string>
    <string name="login_success">Login successful!</string>
    <string name="fill_all_fields">Please fill all fields</string>

    <!-- Sign Up -->
    <string name="signup_title">Sign up</string>
    <string name="already_have_account">Already have an account? Log in</string>
    <string name="signup_success">Sign up successful!</string>

    <!-- Forgot Password -->
    <string name="forgot_password_title">Forgot Password</string>
    <string name="reset_password_hint">Enter your email to reset password</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="back_to_login">Back to Login</string>
    <string name="reset_success">Reset link sent to your email</string>
    <string name="enter_email">Please enter your email</string>
</resources>
