<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Logo -->
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/app_name" />

        <!-- App name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="26sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_slogan"
            android:textColor="#888888"
            android:textSize="14sp"
            android:layout_marginBottom="32dp" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textAlignment="viewStart"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="Enter your email and password"
            android:textAlignment="viewStart"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg_selector"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_email"
                android:contentDescription="Email icon"
                app:tint="#888888"
                android:layout_marginEnd="8dp" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:background="@null"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:padding="8dp" />
        </LinearLayout>

        <!-- Ô nhập Password -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg_selector"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:layout_marginTop="16dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_lock"
                android:contentDescription="Password icon"
                android:layout_marginEnd="8dp"
                app:tint="#888888" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:background="@null"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:padding="8dp"/>
        </LinearLayout>

        <!-- Remember + Forgot -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">

            <CheckBox
                android:id="@+id/chkRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"/>

            <TextView
                android:id="@+id/tvForgotPass"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textAlignment="textEnd"
                android:textColor="@color/primary_blue"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Nút Login -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/primary_blue"
            android:layout_marginTop="20dp"
            android:padding="12dp"
            android:layout_marginBottom="12dp"/>

        <!-- Sign up link -->
        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account_signup"
            android:textColor="@color/primary_blue"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:gravity="center"/>
    </LinearLayout>
</ScrollView>
